# c_compiler

./: .gitignore  README.md  development_plan.md
c_compiler/: README.md  ast.ml  codegen.ml  development_plan.md  dune  dune-project  grammar.mly  ir.ml  lexer.mll  main.ml  semantics.ml  tokens.mli
c_compiler/_build/: .db  .digest-db  log
c_compiler/_build/default/: grammar.ml  grammar.mli  grammar.mly  lexer.ml  lexer.mll  main.ml  parser.ml  parser.mli  parser.mly  tokens.mli
c_compiler/_build/default/.dune/: configurator  configurator.v2
c_compiler/_build/default/.main.eobjs/: dune__exe.ml-gen  dune__exe__Grammar.impl.d  dune__exe__Grammar.intf.d  dune__exe__Lexer.impl.all-deps  dune__exe__Lexer.impl.d  dune__exe__Main.impl.all-deps  dune__exe__Main.impl.d  dune__exe__Parser.impl.d  dune__exe__Parser.intf.d  dune__exe__Tokens.intf.d
c_compiler/_build/default/.main.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Lexer.cmi  dune__exe__Lexer.cmo  dune__exe__Lexer.cmt  dune__exe__Main.cmi  dune__exe__Main.cmti  dune__exe__Tokens.cmi  dune__exe__Tokens.cmti
c_compiler/_build/default/.main.eobjs/native/: dune__exe.cmx  dune__exe__Lexer.cmx  dune__exe__Main.cmx
c_compiler/_build/default/.merlin-conf/: exe-main
