(executable
 (name main)
 (libraries menhirLib)
 (modules main lexer parser))

(rule
 (targets lexer.ml)
 (deps lexer.mll)
 (action
  (run ocamllex -o %{targets} %{deps})))

(rule
 (targets parser.ml parser.mli)
 (deps parser.mly)
 (action
  (run menhir --external-tokens Parser --table --explain --base parser %{deps})))