(executable
 (name main)
 (libraries menhirLib)
 (modules main lexer grammar))

(rule
 (targets lexer.ml)
 (deps lexer.mll)
 (action
  (run ocamllex -o %{targets} %{deps})))

(rule
 (targets grammar.ml grammar.mli)
 (deps grammar.mly)
 (action
  (run menhir --external-tokens Grammar --table --explain --base grammar %{deps})))