(executable
 (name main)
 (libraries menhirLib)
 (modules main lexer grammar tokens ast)
 (modules_without_implementation tokens))

(rule
 (targets lexer.ml)
 (deps lexer.mll)
 (action
  (run ocamllex -o %{targets} %{deps})))

(rule
 (targets grammar.ml grammar.mli)
 (deps grammar.mly)
 (action
  (run menhir --external-tokens Tokens --table --explain --base grammar %{deps})))